--- a/mi-portfolio/src/app/inicio/inicio.component.html
+++ b/mi-portfolio/src/app/inicio/inicio.component.html
@@ -1,1 +1,12 @@
-<p>inicio works!</p>
+<div class="contenedorPrincipal">
+    <section class="slide">
+        <app-inicio-home></app-inicio-home>
+    </section>
+    <section class="slide">
+        <app-inicio-home></app-inicio-home>
+    </section>
+</div>
+
+<!-- <div *ngIf="toastVisible" class="mensaje fade">
+    Copiado en portapapeles
+</div> -->
