--- a/mi-portfolio/src/app/inicio-contacto/inicio-contacto.component.css
+++ b/mi-portfolio/src/app/inicio-contacto/inicio-contacto.component.css
@@ -137,7 +137,7 @@
 
   .informacionContenedor {
     background: rgb(19, 20, 23);
-    border-radius: 1rem;
+    border-radius: 10px;
     padding: 1rem 1.5rem;
     color: white;
     font-family: 'Ubuntu', sans-serif;
@@ -300,7 +300,7 @@
     gap: 0.8rem;
     background: rgb(19, 20, 23);
     backdrop-filter: blur(10px);
-    border-radius: 1rem;
+    border-radius: 10px;
     border: 0.1rem solid rgb(7, 8, 9);
     box-shadow: 0.6rem 0.6rem 0 rgb(13, 13, 15);
     color: white;
