--- a/mi-portfolio/src/app/inicio-contacto/inicio-contacto.component.html
+++ b/mi-portfolio/src/app/inicio-contacto/inicio-contacto.component.html
@@ -21,14 +21,9 @@
       <div class="informacionContenedor simbolos" (click)="copiarTexto('juanramondeleonmartin@gmail.com')">
         <span class="material-symbols-outlined">content_copy</span>
       </div>
-
-      <div class="informacionContenedor simbolos">
-        <a  href="https://mail.google.com/mail/?view=cm&to=juanramondeleonmartin@gmail.com"
-            target="_blank"
-            rel="noopener noreferrer">
-          <span class="material-symbols-outlined">send</span>
-        </a>
-      </div>
+      <a  href="https://mail.google.com/mail/?view=cm&to=juanramondeleonmartin@gmail.com" target="_blank" rel="noopener noreferrer" class="informacionContenedor simbolos">
+        <span class="material-symbols-outlined">send</span>
+      </a>
     </div>
     <div class="contactoFila">
       <span class="titulo">LinkedIn:</span>
@@ -46,11 +41,9 @@
     </div>
     <div class="contactoFila">
       <span class="titulo">Currículum:</span>
-      <div class="informacionContenedor simbolos">
-        <a href="pdf/Curriculum Juan Ramón de León Martín.pdf" download>
+        <a href="pdf/Curriculum Juan Ramón de León Martín.pdf" download class="informacionContenedor simbolos">
           <span class="material-symbols-outlined">download</span>
         </a>
-      </div>
     </div>
   </div>
 </div>
