--- a/mi-portfolio/src/app/inicio/inicio.component.css
+++ b/mi-portfolio/src/app/inicio/inicio.component.css
@@ -1,15 +1,91 @@
 .slide {
   width: 100%;
-  min-height: 100vh;
   display: flex;
   justify-content: center; /* Centra el contenido verticalmente */
   align-items: center;
   transition: opacity 1s ease, transform 1s ease;
   opacity: 1;
   transform: translateY(0);
+  padding-bottom: 5vh;
+  padding-top: 5vh;
 }
 
 .slide:not(.visible) {
   opacity: 0;
   transform: translateY(50px);
+}
+
+.mensaje {
+  position: fixed;
+  bottom: 2rem;
+  left: 20%;
+  width: 60%;
+  transform: translateX(-50%);
+  background: rgb(19, 20, 23);
+  border-radius: 7px;
+  padding: 1rem 1.5rem;
+  color: white;
+  font-family: 'Ubuntu', sans-serif;
+  text-align: center;
+  font-size: 0.6rem;
+  letter-spacing: 0.1rem;
+  border: 0.1rem solid rgba(68, 214, 44, 0.2);
+  box-shadow: 0.2rem 0.2rem 0 rgb(69, 196, 49);
+  z-index: 9999;
+  opacity: 0;
+}
+
+@media (min-width: 820px) {
+  .mensaje {
+    position: fixed;
+    bottom: 2rem;
+    left: 30%;
+    width: 40%;
+    transform: translateX(-50%);
+    background: rgb(19, 20, 23);
+    border-radius: 10px;
+    padding: 1rem 1.5rem;
+    color: white;
+    font-family: 'Ubuntu', sans-serif;
+    text-align: center;
+    font-size: 1rem;
+    letter-spacing: 0.1rem;
+    border: 0.1rem solid rgba(68, 214, 44, 0.2);
+    box-shadow: 0.3rem 0.3rem 0 rgb(69, 196, 49);
+    z-index: 9999;
+    opacity: 0;
+  }
+}
+
+@media (min-width: 1500px) {
+  .mensaje {
+    position: fixed;
+    bottom: 2rem;
+    left: 37.5%;
+    width: 25%;
+    transform: translateX(-50%);
+    background: rgb(19, 20, 23);
+    border-radius: 10px;
+    padding: 1rem 1.5rem;
+    color: white;
+    font-family: 'Ubuntu', sans-serif;
+    text-align: center;
+    font-size: 1.2rem;
+    letter-spacing: 0.1rem;
+    border: 0.1rem solid rgba(68, 214, 44, 0.2);
+    box-shadow: 0.6rem 0.6rem 0 rgb(69, 196, 49);
+    z-index: 9999;
+    opacity: 0;
+  }
+}
+
+.mensaje.fade {
+  animation: aparecerYDesaparecer 3s ease forwards;
+}
+
+@keyframes aparecerYDesaparecer {
+  0% { opacity: 0; transform: translateY(10px); }
+  10% { opacity: 1; transform: translateY(0); }
+  85% { opacity: 1; transform: translateY(0); }
+  100% { opacity: 0; transform: translateY(-10px); }
 }
