--- a/mi-portfolio/src/app/inicio/inicio.component.html
+++ b/mi-portfolio/src/app/inicio/inicio.component.html
@@ -3,13 +3,13 @@
         <app-inicio-home></app-inicio-home>
     </section>
     <section class="slide">
-        <app-inicio-contacto (textoCopiado)="mostrarToast()"></app-inicio-contacto>
+        <app-inicio-linea-temporal></app-inicio-linea-temporal>
     </section>
     <section class="slide">
-        <app-inicio-home></app-inicio-home>
+        <app-inicio-contacto (textoCopiado)="mostrarToast()"></app-inicio-contacto>
     </section>
 </div>
 
-<div *ngIf="toastVisible" class="mensaje fade">
-    Copiado en portapapeles
+<div class="toast-container" *ngIf="toastVisible">
+  <div class="mensaje fade">Copiado en portapapeles</div>
 </div>
