--- a/mi-portfolio/src/app/proyectos-principales/proyectos-principales.component.css
+++ b/mi-portfolio/src/app/proyectos-principales/proyectos-principales.component.css
@@ -11,10 +11,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 1rem;
   text-align: center;
   width: 100%;
-  background-color: blue;
 }
 
 @media (min-width: 768px) {
@@ -22,9 +20,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 4rem;
-    height: 20%;
     text-align: center;
+    width: 100%;
   }
 }
 
@@ -33,9 +30,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 6rem;
-    height: 20%;
     text-align: center;
+    width: 100%;
   }
 }
 
@@ -92,8 +88,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  background-color: rgb(33, 33, 100);
-  padding-top: 5rem;
+  padding-top: 2rem;
   padding-bottom: 5rem;
 }
 
@@ -104,7 +99,6 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  background-color: rgb(177, 95, 75);
 }
 
 .señalizador {
@@ -112,7 +106,6 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  background-color: rgb(100, 33, 44);
   padding-top: 5rem;
   padding-bottom: 5rem;
 }
@@ -123,7 +116,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(33, 100, 83);
 }
 
 /* Botones para viajar con el carrusel */
@@ -244,7 +236,6 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-color: rgb(92, 92, 194);
   overflow: hidden;
 }
 
@@ -253,15 +244,14 @@
   background: rgba(22, 24, 26);
   backdrop-filter: blur(10px);
   border-radius: 7px;
-  padding: 2rem;
+  padding: 1rem;
   border: 0.1rem solid rgba(68, 214, 44, 0.2);
   box-shadow: 0.3rem 0.3rem 0 rgba(69, 196, 49);
   text-align: center;
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
-  padding: 2rem;
-  margin: 5rem;
+  margin: 2rem;
 }
 
 .señalizador {
@@ -269,7 +259,6 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  background-color: rgb(236, 190, 197);
   padding-top: 0;
   padding-bottom: 0;
 }
@@ -316,9 +305,8 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    background-color: rgb(33, 33, 100);
-    padding-top: 5rem;
-    padding-bottom: 5rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
   }
 
   .contenedorBotones {
@@ -327,7 +315,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(33, 100, 83);
   }
 
   /* Botones para viajar con el carrusel */
@@ -448,7 +435,6 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    background-color: rgb(92, 92, 194);
     overflow: hidden;
   }
 
@@ -465,7 +451,7 @@
     flex-direction: column;
     gap: 1.5rem;
     padding: 2rem;
-    margin: 5rem;
+    margin: 2rem;
   }
 
   .indicadores {
@@ -511,23 +497,21 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    background-color: rgb(33, 33, 100);
-    padding-top: 5rem;
-    padding-bottom: 5rem;
+    padding-top: 1rem;
+    padding-bottom: 2rem;
   }
 
   .contenedorBotones {
-    width: 30%;
+    width: 20%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(33, 100, 83);
   }
 
   /* Botones para viajar con el carrusel */
   .botonIzquierda {
-    margin-left: 40%;
+    margin-left: 90%;
     position: relative;
     width: 40px;
     height: 40px;
@@ -537,7 +521,7 @@
   }
 
   .botonDerecha {
-    margin-right: 40%;
+    margin-right: 90%;
     position: relative;
     width: 40px;
     height: 40px;
@@ -637,30 +621,28 @@
   }
 
   .contenedorCarrusel {
-    width: 40%;
+    width: 60%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
-    background-color: rgb(92, 92, 194);
     overflow: hidden;
   }
 
   .card {
-    width: 30rem;
+    width: 40rem;
     background: rgba(22, 24, 26);
     backdrop-filter: blur(10px);
-    border-radius: 1rem;
-    padding: 2rem;
+    border-radius: 10px;
+    padding: 1.5rem;
     border: 0.1rem solid rgba(68, 214, 44, 0.2);
     box-shadow: 0.6rem 0.6rem 0 rgba(69, 196, 49);
     text-align: center;
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
-    padding: 2rem;
-    margin: 5rem;
+    gap: 2rem;
+    margin: 3rem;
   }
   
   .indicadores {
@@ -695,5 +677,309 @@
     background-color: rgba(69, 196, 49);
     border: 0.1rem rgba(69, 196, 49);
     transform: scale(1.3);
+  }
+}
+
+.titular {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  box-sizing: border-box;
+  align-items: stretch;
+}
+
+.titulo {
+  color: white;
+  margin: 0;
+  font-size: 1.3rem;
+  font-family: 'Ubuntu', sans-serif;
+  width: 100%;
+  text-align: start;
+  font-weight: 400;
+}
+
+.enlacesCard {
+  display: flex;
+  flex-direction: row;
+  box-sizing: border-box;
+  gap: 0.7rem;
+  text-align: center;
+  align-items: center;
+}
+
+.botonEnlace {
+  position: relative;
+  background: rgba(69, 196, 49);
+  border: none;
+  border-radius: 5px;
+  width: 1.5rem;
+  height: 1.5rem;
+  color: black;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.1em;
+  line-height: 1;
+  text-decoration: none;
+  box-shadow: 0 0 20px 6px rgba(0, 0, 0, 0.35);
+}
+
+.material-symbols-outlined {
+  font-size: 1.5em;
+}
+
+.descripcion {
+  width: auto;
+  background: rgba(69, 196, 49);
+  backdrop-filter: blur(10px);
+  border-radius: 7px;
+  padding: 0.7rem;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.texto {
+  color: rgba(22, 24, 26);
+  margin: 0;
+  line-height: 1.6;
+  font-size: 0.6rem;
+  font-family: 'Ubuntu', sans-serif;
+  text-align: start;
+  font-weight: bold;
+}
+
+.imagen {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  
+}
+
+.imagen img {
+  width: 100%;
+  aspect-ratio: 5/4;
+  border-radius: 7px;
+  border: 0.3rem rgb(232, 236, 241);
+  padding: 1rem;
+  background: rgb(232, 236, 241);
+  backdrop-filter: blur(2rem);
+  object-fit: contain;
+}
+
+.filaInferiorCard {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  gap: 1rem;
+}
+
+.tecnologias {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  color: rgba(22, 24, 26);
+  border: 0.15rem solid rgba(68, 214, 44, 0.2);
+  box-shadow: 0 0 20px 6px rgba(0, 0, 0, 0.35);
+  border-radius: 7px;
+  padding: 0.5rem;
+}
+
+.tecnologias img {
+  width: 1.5rem;
+  height: 1.5rem;
+  object-fit: contain;
+  transition: transform 0.3s ease;
+}
+
+.tecnologias img:hover {
+  transform: scale(1.2);
+}
+
+@media (min-width: 768px) {
+  .titulo {
+    color: white;
+    margin: 0;
+    font-size: 1.7rem;
+    font-family: 'Ubuntu', sans-serif;
+    width: 100%;
+    text-align: start;
+    font-weight: 500;
+  }
+
+  .enlacesCard {
+    display: flex;
+    flex-direction: row;
+    box-sizing: border-box;
+    gap: 1rem;
+    text-align: center;
+    align-items: center;
+  }
+
+  .botonEnlace {
+    position: relative;
+    background: rgba(69, 196, 49);
+    border: none;
+    border-radius: 5px;
+    width: 2.5rem;
+    height: 2.5rem;
+    color: black;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.7em;
+    line-height: 1;
+    text-decoration: none;
+  }
+
+  .material-symbols-outlined {
+    font-size: 1.5em;
+  }
+
+  .descripcion {
+    width: auto;
+    background: rgba(69, 196, 49);
+    backdrop-filter: blur(10px);
+    border-radius: 10px;
+    padding: 1rem;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .texto {
+    color: rgba(22, 24, 26);
+    margin: 0;
+    line-height: 1.6;
+    font-size: 0.9rem;
+    font-family: 'Ubuntu', sans-serif;
+    text-align: start;
+    font-weight: bold;
+  }
+
+  .imagen img {
+    width: 100%;
+    aspect-ratio: 3/2;
+    border-radius: 10px;
+    border: 0.3rem rgb(232, 236, 241);
+    padding: 2rem;
+    background: rgb(232, 236, 241);
+    backdrop-filter: blur(2rem);
+    object-fit: contain;
+  }
+
+  .tecnologias {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    color: rgba(22, 24, 26);
+    border: 0.15rem solid rgba(68, 214, 44, 0.2);
+    border-radius: 10px;
+    padding: 0.5rem;
+  }
+
+  .tecnologias img {
+    width: 2.5rem;
+    height: 2.5rem;
+    object-fit: contain;
+    transition: transform 0.3s ease;
+  }
+}
+
+@media (min-width: 1500px) {
+  .titulo {
+    color: white;
+    margin: 0;
+    font-size: 1.7rem;
+    font-family: 'Ubuntu', sans-serif;
+    width: 100%;
+    text-align: start;
+    font-weight: 500;
+  }
+
+  .enlacesCard {
+    display: flex;
+    flex-direction: row;
+    box-sizing: border-box;
+    gap: 1rem;
+    text-align: center;
+    align-items: center;
+  }
+
+  .botonEnlace {
+    position: relative;
+    background: rgba(69, 196, 49);
+    border: none;
+    border-radius: 5px;
+    width: 2.5rem;
+    height: 2.5rem;
+    color: black;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.7em;
+    line-height: 1;
+    text-decoration: none;
+  }
+
+  .material-symbols-outlined {
+    font-size: 1.5em;
+  }
+
+  .descripcion {
+    width: auto;
+    background: rgba(69, 196, 49);
+    backdrop-filter: blur(10px);
+    border-radius: 10px;
+    padding: 1rem;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .texto {
+    color: rgba(22, 24, 26);
+    margin: 0;
+    line-height: 1.6;
+    font-size: 0.9rem;
+    font-family: 'Ubuntu', sans-serif;
+    text-align: start;
+    font-weight: bold;
+  }
+
+  .imagen img {
+    width: 100%;
+    aspect-ratio: 4/2;
+    border-radius: 10px;
+    border: 0.3rem rgb(232, 236, 241);
+    padding: 2rem;
+    background: rgb(232, 236, 241);
+    backdrop-filter: blur(2rem);
+    object-fit: contain;
+  }
+
+  .tecnologias {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    color: rgba(22, 24, 26);
+    border: 0.15rem solid rgba(68, 214, 44, 0.2);
+    border-radius: 10px;
+    padding: 0.5rem;
+  }
+
+  .tecnologias img {
+    width: 2.5rem;
+    height: 2.5rem;
+    object-fit: contain;
+    transition: transform 0.3s ease;
   }
 }
