--- a/mi-portfolio/src/app/proyectos-principales/proyectos-principales.component.html
+++ b/mi-portfolio/src/app/proyectos-principales/proyectos-principales.component.html
@@ -9,19 +9,40 @@
             </div>
             <div class="contenedorCarrusel">
                 <ngb-carousel #carrusel [interval]="6000" [pauseOnHover]="true" [wrap]="true" [showNavigationArrows]="false" [showNavigationIndicators]="false" (slide)="onSlide($event)">
-                    <ng-template ngbSlide>
+                    <ng-template ngbSlide *ngFor="let recurso of recursos">
                         <div class="card">
-                            
-                        </div>
-                    </ng-template>
-                    <ng-template ngbSlide>
-                        <div class="card">
-                            
-                        </div>
-                    </ng-template>
-                    <ng-template ngbSlide>
-                        <div class="card">
-                            
+                            <div class="titular">
+                                <span class="titulo">{{ recurso.nombre }}</span>
+                            </div>
+
+                            <div class="descripcion">
+                                <p class="texto">
+                                {{ recurso.descripcion }}
+                                </p>
+                            </div>
+
+                            <div class="imagen">
+                                <img [src]="recurso.img" alt="Ilustración">
+                            </div>
+
+                            <div class="filaInferiorCard">
+                                <div class="tecnologias">
+                                    <img
+                                    *ngFor="let tecnologia of recurso.tecnologias"
+                                    [src]="tecnologia.logo"
+                                    [alt]="tecnologia.nombre"
+                                    class="logoTecnologia"
+                                    />
+                                </div>
+                                <div class="enlacesCard">
+                                    <a [href]="recurso.enlace" target="_blank" class="botonEnlace">
+                                        <i class="fab fa-github"></i>
+                                    </a>
+                                    <a *ngIf="recurso.url" [href]="recurso.url" target="_blank" class="botonEnlace">
+                                        <i class="material-symbols-outlined">Link</i>
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                     </ng-template>
                 </ngb-carousel>
@@ -32,42 +53,13 @@
         </div>
         <div class="señalizador">
             <div class="indicadores">
-                <div class="indicador" (click)="carrusel.select('ngb-slide-0')" [class.activo]="activeSlide === 0"></div>
-                <div class="indicador" (click)="carrusel.select('ngb-slide-1')" [class.activo]="activeSlide === 1"></div>
-                <div class="indicador" (click)="carrusel.select('ngb-slide-2')" [class.activo]="activeSlide === 2"></div>
+                <div 
+                class="indicador" 
+                *ngFor="let recurso of recursos; let i = index"
+                (click)="carrusel.select('ngb-slide-' + i)" 
+                [class.activo]="activeSlide === i">
+                </div>
             </div>
         </div>
     </div>
 </div>
-
-<!-- jose antonio perez de las cuevas-->
-
-<!-- <ng-template ngbSlide *ngFor="let recurso of recursos">
-                <div class="card">
-                <div class="titular">
-                    <span class="titulo">{{ recurso.nombre }}</span>
-                    <a [href]="recurso.enlace" target="_blank" class="botonEnlaceGithub">
-                    <i class="fab fa-github"></i>
-                    </a>
-                </div>
-
-                <div class="descripcion">
-                    <p class="texto">
-                    {{ recurso.descripcion }}
-                    </p>
-                </div>
-
-                <div class="imagen">
-                    <img [src]="recurso.img" alt="Ilustración">
-                </div>
-
-                <div class="tecnologias">
-                    <img
-                    *ngFor="let tecnologia of recurso.tecnologias"
-                    [src]="tecnologia.logo"
-                    [alt]="tecnologia.nombre"
-                    class="logoTecnologia"
-                    />
-                </div>
-                </div>
-            </ng-template> -->
