Terminado el proyecto todas las pantallas, faltan pequeños arreglos visuales y cambiar los textos

--- a/mi-portfolio/src/app/app.component.css
+++ b/mi-portfolio/src/app/app.component.css
@@ -4,4 +4,9 @@ app-menu-lateral {
     right: 30px;
     margin-right: 10px;
     padding: 10px;
+    z-index: 100;
+}
+
+.contenedorPrincipal {
+    z-index: 10;
 }
