--- a/mi-portfolio/src/app/inicio-linea-temporal/inicio-linea-temporal.component.html
+++ b/mi-portfolio/src/app/inicio-linea-temporal/inicio-linea-temporal.component.html
@@ -8,7 +8,7 @@
           <p class="titulo">10/2022 - 12/2024</p>
         </div>
     </div>
-    <div class="filaSuperior2">
+    <div class="filaLinea">
       <div class="contenedor">
         <div class="figura">
           <div class="circulo"></div>
@@ -34,7 +34,7 @@
           <p class="textoTrayectorias">Primeros pasos en el mundo de la programación en el primer año, y en el segundo especialización en <span class="resaltarLetras">Java en el desarrolllo de aplicaciones</span>. Aprendizaje de programar en <span class="resaltarLetras">Python</span> y android con <span class="resaltarLetras">Android Studio</span>, pero en menor medida que <span class="resaltarLetras">Java</span>. Desarrollo de varias aplicaciones como mi proyecto final en una <span class="resaltarLetras">aplicación Movil</span> y uso de <span class="resaltarLetras">despliegue de aplicaciones</span> para una funcionalidad final.</p>
         </div>
     </div>
-    <div class="filaSuperior2">
+    <div class="filaLinea">
       <div class="contenedor">
         <div class="figura">
           <div class="circulo"></div>
@@ -55,7 +55,7 @@
           <p class="titulo">10/2022 - 12/2024</p>
         </div>
     </div>
-    <div class="filaSuperior2">
+    <div class="filaLinea">
       <div class="contenedor">
         <div class="figura">
           <div class="circulo"></div>
@@ -81,11 +81,29 @@
           <p class="textoTrayectorias">Primeros pasos en el mundo de la programación en el primer año, y en el segundo especialización en <span class="resaltarLetras">Java en el desarrolllo de aplicaciones</span>. Aprendizaje de programar en <span class="resaltarLetras">Python</span> y android con <span class="resaltarLetras">Android Studio</span>, pero en menor medida que <span class="resaltarLetras">Java</span>. Desarrollo de varias aplicaciones como mi proyecto final en una <span class="resaltarLetras">aplicación Movil</span> y uso de <span class="resaltarLetras">despliegue de aplicaciones</span> para una funcionalidad final.</p>
         </div>
     </div>
-    <div class="filaSuperior2">
+    <div class="filaLinea">
       <div class="contenedor">
         <div class="figura">
           <div class="circulo"></div>
-           <div class="barra"></div>
+          <div class="contenedorBarraFinal">
+          <div class="barraFinal"></div>
+
+          <div class="fila fila1">
+            <div class="cuadrado c1"></div>
+            <div class="cuadrado c2"></div>
+            <div class="cuadrado c3"></div>
+          </div>
+
+          <div class="fila fila2">
+            <div class="cuadrado c4"></div>
+            <div class="cuadrado c5"></div>
+          </div>
+
+          <div class="fila fila3">
+            <div class="cuadrado c6"></div>
+            <div class="cuadrado c7"></div>
+          </div>
+        </div>
         </div>
       </div>
     </div>
