--- a/mi-portfolio/src/app/inicio-linea-temporal/inicio-linea-temporal.component.css
+++ b/mi-portfolio/src/app/inicio-linea-temporal/inicio-linea-temporal.component.css
@@ -37,7 +37,7 @@
 }
 
 .filaSuperiorIzquierda {
-  width: 45%;
+  width: 42.5%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -51,7 +51,7 @@
 }
 
 .filaSuperiorDerecha {
-  width: 45%;
+  width: 42.5%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -101,8 +101,8 @@
   font-size: 0.6rem;
 }
 
-.filaSuperior2 {
-  width: 10%;
+.filaLinea {
+  width: 15%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -129,7 +129,7 @@
 .circulo {
   width: 90%;
   aspect-ratio: 1;
-  background: radial-gradient(circle at center, transparent 40%, #22b14c 41%);
+  background: radial-gradient(circle at center, transparent 30%, #22b14c 31%);
   border: 0.1rem solid rgba(68, 214, 44, 0.2);
   border-radius: 50%;
   position: relative;
@@ -144,6 +144,82 @@
   background-color: #22b14c;
   border-radius: 10rem;
   z-index: 1;
+}
+
+.contenedorBarraFinal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+  height: 100%;
+  width: 100%;
+  margin-top: 15%;
+  margin-bottom: 10%;
+  -webkit-mask-image: linear-gradient(to bottom, rgba(0,0,0,1) 0%, rgba(0,0,0,0.2) 100%);
+  mask-image: linear-gradient(to bottom, rgba(0,0,0,1) 0%, rgba(0,0,0,0.) 100%);
+  }
+  
+.barraFinal {
+  width: 30%;
+  height: 70%;
+  background-color: #22b14c;
+  border-radius: 10rem 10rem 0 0;
+  z-index: 1;
+}
+
+.fila {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.1rem;
+  height: calc(30% / 3);
+}
+
+.cuadrado {
+  aspect-ratio: 1 / 1;
+  background-color: #22b14c;
+}
+
+.c1 {
+  width: 1rem;
+  transform: translate(35%, -100%);
+  border-radius: 2px;
+}
+
+.c2 {
+  width: 0.5rem;
+  transform: translate(45%, 20%);
+  border-radius: 1px;
+}
+
+.c3 {
+  width: 0.75rem;
+  transform: translate(-30%, 70%);
+  border-radius: 1px;
+}
+
+.c4 {
+  width: 0.4rem;
+  transform: translate(-50%, -90%);
+  border-radius: 1px;
+}
+
+.c5 {
+  width: 1rem;
+  transform: translate(10%, 10%);
+  border-radius: 2px;
+}
+
+.c6 {
+  width: 0.6rem;
+  transform: translate(20%, -120%);
+  border-radius: 1px;
+}
+
+.c7 {
+  width: 0.4rem;
+  transform: translate(-50%, 60%);
+  border-radius: 1px;
 }
 
 @media (min-width: 768px) {
@@ -165,7 +241,7 @@
   }
 
   .filaSuperiorIzquierda {
-    width: 45%;
+    width: 42.5%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -179,7 +255,7 @@
   }
 
   .filaSuperiorDerecha {
-    width: 45%;
+    width: 42.5%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -189,6 +265,14 @@
     position: relative;
     padding-bottom: 3rem;
     padding-top: 1.5rem;
+  }
+
+  .filaLinea {
+    width: 15%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
   }
 
   .enlacesContenedor {
@@ -219,6 +303,14 @@
     font-size: 1rem;
   }
 
+  .filaLinea {
+    width: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
   .circulo {
     width: 80%;
     aspect-ratio: 1;
@@ -238,6 +330,82 @@
     background-color: #22b14c;
     border-radius: 10rem;
     z-index: 1;
+  }
+
+  .contenedorBarraFinal {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+    height: 100%;
+    width: 100%;
+    margin-top: 15%;
+    margin-bottom: 10%;
+    -webkit-mask-image: linear-gradient(to bottom, rgba(0,0,0,1) 0%, rgba(0,0,0,0.2) 100%);
+    mask-image: linear-gradient(to bottom, rgba(0,0,0,1) 0%, rgba(0,0,0,0.) 100%);
+  }
+
+  .barraFinal {
+    width: 30%;
+    height: 50%;
+    background-color: #22b14c;
+    border-radius: 10rem 10rem 0 0;
+    z-index: 1;
+  }
+
+  .fila {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.4rem;
+    height: calc(50% / 3);
+  }
+
+  .cuadrado {
+    aspect-ratio: 1 / 1;
+    background-color: #22b14c;
+  }
+
+  .c1 {
+    width: 2rem;
+    transform: translate(25%, -70%);
+    border-radius: 5px;
+  }
+
+  .c2 {
+    width: 1rem;
+    transform: translate(45%, -60%);
+    border-radius: 3px;
+  }
+
+  .c3 {
+    width: 1.5rem;
+    transform: translate(-40%, 20%);
+    border-radius: 4px;
+  }
+
+  .c4 {
+    width: 0.8rem;
+    transform: translate(-50%, -60%);
+    border-radius: 2px;
+  }
+
+  .c5 {
+    width: 2rem;
+    transform: translate(50%, 10%);
+    border-radius: 5px;
+  }
+
+  .c6 {
+    width: 1.2rem;
+    transform: translate(20%, -120%);
+    border-radius: 3px;
+  }
+
+  .c7 {
+    width: 0.8rem;
+    transform: translate(-50%, 60%);
+    border-radius: 2px;
   }
 }
 
@@ -336,5 +504,68 @@
     background-color: #22b14c;
     border-radius: 10rem;
     z-index: 1;
+  }
+
+  .barraFinal {
+    width: 30%;
+    height: 50%;
+    background-color: #22b14c;
+    border-radius: 10rem 10rem 0 0;
+    z-index: 1;
+  }
+
+  .fila {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.4rem;
+    height: calc(50% / 3);
+  }
+
+  .cuadrado {
+    aspect-ratio: 1 / 1;
+    background-color: #22b14c;
+  }
+
+  .c1 {
+    width: 2rem;
+    transform: translate(25%, -70%);
+    border-radius: 5px;
+  }
+
+  .c2 {
+    width: 1rem;
+    transform: translate(45%, -60%);
+    border-radius: 3px;
+  }
+
+  .c3 {
+    width: 1.5rem;
+    transform: translate(-40%, 20%);
+    border-radius: 4px;
+  }
+
+  .c4 {
+    width: 0.8rem;
+    transform: translate(-50%, -60%);
+    border-radius: 2px;
+  }
+
+  .c5 {
+    width: 2rem;
+    transform: translate(50%, 10%);
+    border-radius: 5px;
+  }
+
+  .c6 {
+    width: 1.2rem;
+    transform: translate(20%, -120%);
+    border-radius: 3px;
+  }
+
+  .c7 {
+    width: 0.8rem;
+    transform: translate(-50%, 60%);
+    border-radius: 2px;
   }
 }
